Update Predicting Chronic Kidney Disease.ipynb

--- a/Predicting Chronic Kidney Disease.ipynb
+++ b/Predicting Chronic Kidney Disease.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('D:\\DOWNLOADS\\kidney_disease.csv')"
+    "df = pd.read_csv('kidney_disease.csv')"
    ]
   },
   {
